--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:fullBackupContent="false"
         android:name=".app.MyApplication"
         android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -31,7 +31,7 @@
             android:name="design_height_in_dp"
             android:value="480" />
 
-        <activity android:name=".ui.MainActivity" >
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -40,9 +40,9 @@
 
 
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.TestActivity">
-        </activity>
-        <activity android:name=".ui.articledetail.ArticleDetailActivity"/>
+        <activity android:name=".ui.TestActivity"/>
+        <activity android:name=".ui.articledetail.ArticleDetailActivity" />
+        <activity android:name=".ui.system.detail.SystemListActivity" />
     </application>
 
 </manifest>
