--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,16 +31,20 @@
             android:name="design_height_in_dp"
             android:value="480" />
 
-        <activity android:name=".ui.MainActivity">
+
+
+        <activity
+            android:name=".ui.SplashActivity"
+            android:theme="@style/AppTheme.Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-
+        <activity android:name=".ui.MainActivity"/>
         <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.TestActivity"/>
+        <activity android:name=".ui.TestActivity" />
         <activity android:name=".ui.articledetail.ArticleDetailActivity" />
         <activity android:name=".ui.system.detail.SystemListActivity" />
     </application>
