调整列表UI效果

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation rootProject.ext.dependencies["autosize"]
     implementation rootProject.ext.dependencies["agentweb"]
     implementation rootProject.ext.dependencies["banner"]
+    implementation rootProject.ext.dependencies["cardview"]
 }
 
 
