--- a/config.gradle
+++ b/config.gradle
@@ -22,6 +22,7 @@ ext {
             "design"              : "com.android.support:design:${dependVersion.support}",
             "recyclerview"        : "com.android.support:recyclerview-v7:${dependVersion.support}",
             "constraint"          : "com.android.support.constraint:constraint-layout:1.1.3",
+            "cardview"            : "com.android.support:cardview-v7:${dependVersion.support}",
 
             //test
             "junit"               : "junit:junit:4.12",
