--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".ui.TestActivity" />
         <activity android:name=".ui.articledetail.ArticleDetailActivity" />
         <activity android:name=".ui.system.detail.SystemListActivity" />
+        <activity android:name=".ui.search.SearchActivity"/>
     </application>
 
 </manifest>
