--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".ui.articledetail.ArticleDetailActivity" />
         <activity android:name=".ui.system.detail.SystemListActivity" />
         <activity android:name=".ui.search.SearchActivity"/>
+        <activity android:name=".ui.search.result.SearchResultActivity"/>
     </application>
 
 </manifest>
